--- a/WarehouseEcommerce/packages.config
+++ b/WarehouseEcommerce/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="AutoMapper" version="9.0.0" targetFramework="net472" />
   <package id="bootstrap" version="4.4.1" targetFramework="net472" />
+  <package id="elmah.corelibrary" version="1.2" targetFramework="net472" />
+  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="EUCookies.NET" version="1.0.4" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
