--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -325,6 +325,7 @@
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Theme\University\app\css\customfontIcons.css" />
     <Content Include="Content\Theme\University\app\css\jquery-confirm.min.css" />
+    <Content Include="Content\Theme\University\app\css\Uni_App.css" />
     <Content Include="Content\Theme\University\app\js\jquery-confirm.min.js" />
     <Content Include="Content\Theme\University\app\css\northumbria_custom.css" />
     <Content Include="Content\Theme\University\app\css\northumbria_responsive.css" />
@@ -510,7 +511,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="Content\Theme\University\UniversityCustomStyle.css" />
+    <Content Include="Content\Theme\University\app\css\Uni_Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\fontawesome-webfont.svg" />
