--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2582,6 +2582,7 @@
     <Content Include="Views\Theme\Default\ProductTags\Details.cshtml" />
     <Content Include="Views\Theme\Default\ProductTags\Edit.cshtml" />
     <Content Include="Views\Theme\Default\ProductTags\Index.cshtml" />
+    <Content Include="Views\Theme\Default\Products\_GetAssociatedItems.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
