product attribute map table added and removed all boolean fileds of product and added product type enum Imported from Changeset 2537

--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Domain\Auth\AuthUserprofile.cs" />
     <Compile Include="Domain\Auth\Module.cs" />
     <Compile Include="Domain\Models\GlobalApi.cs" />
+    <Compile Include="Domain\Models\ProductAttributeMap.cs" />
     <Compile Include="Domain\Models\ProductTagMap .cs" />
     <Compile Include="Domain\Models\ProductTag.cs" />
     <Compile Include="Domain\Models\Tooltip.cs" />
