--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -851,6 +851,14 @@
     <Compile Include="Migrations\202005222237270_isactive-coulmn-add-in-productkitMap.designer.cs">
       <DependentUpon>202005222237270_isactive-coulmn-add-in-productkitMap.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005232307351_producttype-added-inProductmaster.cs" />
+    <Compile Include="Migrations\202005232307351_producttype-added-inProductmaster.designer.cs">
+      <DependentUpon>202005232307351_producttype-added-inProductmaster.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005251805283_product-attributeMap-table-Added.cs" />
+    <Compile Include="Migrations\202005251805283_product-attributeMap-table-Added.designer.cs">
+      <DependentUpon>202005251805283_product-attributeMap-table-Added.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1809,6 +1817,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005222237270_isactive-coulmn-add-in-productkitMap.resx">
       <DependentUpon>202005222237270_isactive-coulmn-add-in-productkitMap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005232307351_producttype-added-inProductmaster.resx">
+      <DependentUpon>202005232307351_producttype-added-inProductmaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005251805283_product-attributeMap-table-Added.resx">
+      <DependentUpon>202005251805283_product-attributeMap-table-Added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
