attribute functionality added for different  producttype Imported from Changeset 2538

--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2583,6 +2583,7 @@
     <Content Include="Views\Theme\Default\ProductTags\Edit.cshtml" />
     <Content Include="Views\Theme\Default\ProductTags\Index.cshtml" />
     <Content Include="Views\Theme\Default\Products\_GetAssociatedItems.cshtml" />
+    <Content Include="Views\Theme\Default\Shared\_AttrValueCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
