Added UI Customisation feature and do some re-factor Imported from Changeset 2541

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -859,6 +859,10 @@
     <Compile Include="Migrations\202005251805283_product-attributeMap-table-Added.designer.cs">
       <DependentUpon>202005251805283_product-attributeMap-table-Added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005270901448_Add-UISettings-tables.cs" />
+    <Compile Include="Migrations\202005270901448_Add-UISettings-tables.designer.cs">
+      <DependentUpon>202005270901448_Add-UISettings-tables.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1823,6 +1827,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005251805283_product-attributeMap-table-Added.resx">
       <DependentUpon>202005251805283_product-attributeMap-table-Added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005270901448_Add-UISettings-tables.resx">
+      <DependentUpon>202005270901448_Add-UISettings-tables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
