--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2589,6 +2589,87 @@
     <Content Include="Views\Theme\Default\ProductTags\Index.cshtml" />
     <Content Include="Views\Theme\Default\Products\_GetAssociatedItems.cshtml" />
     <Content Include="Views\Theme\Default\Shared\_AttrValueCreate.cshtml" />
+    <Content Include="Views\Theme\Modern\AuthUserGroups\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\AuthUserGroups\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\AuthUserGroups\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\AuthUserGroups\_authUsersGroupsList.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\_ProductAllowanceGroupList.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowanceGroups\_ProductAllowanceGroupProductList.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowances\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowances\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowances\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowances\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowances\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductAllowances\_ProductAllowanceList.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductsWebsitesMaps\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductsWebsitesMaps\_WebsiteProductsList.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductTags\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductTags\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductTags\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductTags\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductTags\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\ProductTags\_ProductTagList.cshtml" />
+    <Content Include="Views\Theme\Modern\Shared\PlaceholdersHtmlEditorPartial.cshtml" />
+    <Content Include="Views\Theme\Modern\Shared\_AttrValueCreate.cshtml" />
+    <Content Include="Views\Theme\Modern\Shared\_HoverUploader.cshtml" />
+    <Content Include="Views\Theme\Modern\Shared\_Tooltip.cshtml" />
+    <Content Include="Views\Theme\Modern\TenantWebsites\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\TenantWebsites\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\TenantWebsites\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\TenantWebsites\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\TenantWebsites\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\TenantWebsites\_TenantWebSiteList.cshtml" />
+    <Content Include="Views\Theme\Modern\Tooltips\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\Tooltips\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\Tooltips\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\Tooltips\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\Tooltips\_TooltipList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteContentPages\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteContentPages\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteContentPages\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteContentPages\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteContentPages\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteContentPages\_WebsiteContentPagesList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\CreateProductNavigation.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\_WebsiteDiscountCodesList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteDiscountCodes\_WebsiteDiscountCodesProductList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\CreateProductNavigation.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\_NavigationList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\_NavProductList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteNavigations\_Uploader.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteShippingRules\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteShippingRules\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteShippingRules\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteShippingRules\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteShippingRules\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteShippingRules\_WebsiteShippingRulesList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteSliders\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteSliders\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteSliders\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteSliders\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteSliders\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteSliders\_SliderList.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteVouchers\Create.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteVouchers\Delete.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteVouchers\Details.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteVouchers\Edit.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteVouchers\Index.cshtml" />
+    <Content Include="Views\Theme\Modern\WebsiteVouchers\_WebsiteVouchersList.cshtml" />
     <Content Include="Views\Theme\Default\UISettings\SettingsBar.cshtml" />
     <Content Include="Views\Theme\Default\UISettings\WebsiteUISettings.cshtml" />
   </ItemGroup>
