--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -39,6 +39,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="MiniProfilerEnabled" value="false" />
     <add key="TenantId" value="1"/>
     <add key="VideoFormats" value=".avi,.mp4"/>
     <add key="ImageFormats" value=".jpeg,.png,.gif,.bmp,.jpg"/>
