Rename API table + bug fixes in admin site and university theme Imported from Changeset 2557

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -871,6 +871,10 @@
     <Compile Include="Migrations\202005282319067_Inventory-Transaction-Types-Table-Removed.designer.cs">
       <DependentUpon>202005282319067_Inventory-Transaction-Types-Table-Removed.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005290413406_GlobalApi-changed-to-ApiCredentials.cs" />
+    <Compile Include="Migrations\202005290413406_GlobalApi-changed-to-ApiCredentials.designer.cs">
+      <DependentUpon>202005290413406_GlobalApi-changed-to-ApiCredentials.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1844,6 +1848,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005282319067_Inventory-Transaction-Types-Table-Removed.resx">
       <DependentUpon>202005282319067_Inventory-Transaction-Types-Table-Removed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005290413406_GlobalApi-changed-to-ApiCredentials.resx">
+      <DependentUpon>202005290413406_GlobalApi-changed-to-ApiCredentials.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
