NoIndex, NoFollow added + custom errors enabled for warehouse zone Imported from Changeset 2561

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -182,7 +182,7 @@
         <add assembly="DevExpress.Web.Resources.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
       </assemblies>
     </compilation>
-    <customErrors mode="Off" defaultRedirect="~/error">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/error">
       <error statusCode="401" redirect="~/error" />
       <error statusCode="403" redirect="~/error" />
       <error statusCode="404" redirect="~/error" />
